Added animation and updated some styles.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main>
-      <div class="container">
+      <div class="container active">
         <picture class="img">
           <source media="(max-width: 767px)" srcset="assets/images/illustration-sign-up-mobile.svg">
           <img src="assets/images/illustration-sign-up-desktop.svg" alt="Image 2">
@@ -58,7 +58,7 @@
           </form>
         </div>
       </div>
-      <div class="success-cont" style="display: none;">
+      <div class="success-cont hidden">
         <div class="success">
           <!-- <img src="assets/images/icon-success.svg" alt="check" /> -->
           <h1>Thanks for subscribing!</h1>
